0.1.5
------------------------------------------------------------------------
- API changed: Add white point settings support (dcraw -S option)
               Add new method to set/check brigness settings aviability
               Raw decoding settings widget re-designed to group each 
               options by features using tabs.
               Add support dcraw options -m -A -P -p -o.

- Updated dcraw to 8.87
  New camera : Kodak C603, Nikon D700, Canon EOS 1000D,
  Canon PowerShot SD300, and Olympus E-520.
  Removed useless code from ppg_interpolate().
- Updated dcraw to 8.86
  New camera : Sony A300.
  Fixed camera WB on the A200.
  Set model-specific saturation levels in adobe_coeff().
  No new options introduced.
- Updated dcraw to 8.85
  New camera : Olympus E-420.
  No new options introduced.
- Updated dcraw to 8.84
  New cameras: Canon EOS 450D, Nikon D60, and Fuji S100FS.
  Copied new matrices from Adobe DNG Converter 4.4.
  sRAW support in 1.393 broke Fuji DNG files, now fixed.
  No new options introduced.

Bugs fixed from B.K.O (http://bugs.kde.org):
001 ==> 

0.1.4
------------------------------------------------------------------------
- updated dcraw to 8.83
  new cameras: Apple QuickTake 200, Fuji IS-1, Sony DSLR-A350, Pentax K20D,
               Nokia N95, Canon PowerShots A460, Canon PowerShots A530, 
	       Canon PowerShots A650.
  no new options introduced.
- updated dcraw to 8.82
  new cameras: Sony DSLR-A200, Sony DSLR-A700, Sony XCD-SX910CR, STV680 VGA
  no new options introduced.

Bugs fixed from B.K.O (http://bugs.kde.org):
001 ==> 142055 : Which whitebalance is used.

0.1.3
------------------------------------------------------------------------
- updated dcraw to 8.81
  new cameras: Canon G7, Fuji FinePix S9100/S9600, Olympus SP560UZ, Panasonic DMC-L10

- updated dcraw to 8.80
  new cameras: Hasselblad H3D, Olympus E-3, Canon EOS 40D, Canon PowerShot G9,
               Canon EOS-1Ds Mark III, AVT F-080C, Nikon D3, Nikon D300,