@@ -5,6 +5,7 @@
                Raw decoding settings widget re-designed to group each 
                options by features using tabs.
                Add support dcraw options -m -A -P -p -o.
+               Add new signal emited when something is changed in settings.
 
 - Updated dcraw to 8.87
   New camera : Kodak C603, Nikon D700, Canon EOS 1000D,
